--- a/src/style.css
+++ b/src/style.css
@@ -61,54 +61,130 @@ textarea,
 select {
   font: inherit;
 }
-
-.wrapper{
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+.wrapper {
   margin: auto;
   max-width: 1440px;
 }
 
-.footer{
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  max-width: 1440px;
-  
+.footer {
+  font-family: "Roboto", sans-serif;
+}
+.footer__upper {
+  background: #9dc9c8;
+  padding: 12.4% 10.2% 12.9% 8.5%;
 }
 
-.footer__upper{
-  background: #9DC9C8;
-}
-
-.footer__bottom{
+.footer__bottom {
   background-color: #000000;
   color: white;
+  padding: 3.5% 10.1% 2% 8.5%;
 }
-
-.herader{
+.footer__word {
+  font-size: 25px;
+}
+.footer__number {
+  font-size: 80px;
+  margin-bottom: 6.4%;
+}
+.herader {
   font-weight: bold;
   font-size: 55px;
+  font-family: "Roboto Slab", serif;
+  margin-bottom: 4.5%;
 }
-.footer__top{
+.footer__bottom-top {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 12.6%;
+  width: 100%;
 }
-
-.footer__icon{
+.footer__text {
+  display: flex;
+  font-size: 18px;
+}
+.text__header {
+  margin-bottom: 3.1%;
+  font-size: 25px;
+}
+.footer__right-side {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  font-size: 25px;
+}
+.footer__left-side {
+  width: 100%;
+}
+.footer__icon {
   display: flex;
 }
-
-.mobile{
+.text {
+  max-width: 294px;
+}
+.mobile {
+  width: 100%;
+  justify-content: flex-end;
   display: flex;
+  margin-bottom: 25px;
+  margin-right: 25px;
+  align-items: center;
 }
-.mail{
+.mail {
+  width: 100%;
   display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
-
-@media (min-width: 992px) and (max-width: 1279px){
-
+.footer__logo {
+  margin-bottom: 5.2%;
+}
+.icon__left {
+  margin-right: 3.3%;
+}
+.icon__right {
+  margin-right: 4%;
 }
 
-@media (min-width: 320px ) and (max-width: 991px){
-  
+.text-left {
+  margin-right: 6%;
+}
+
+@media (min-width: 992px) and (max-width: 1279px) {
+}
+
+@media (min-width: 320px) and (max-width: 991px) {
+  .footer__bottom-top {
+    flex-wrap: wrap;
+  }
+  .mobile {
+    justify-content: flex-start;
+    margin: 0;
+    margin-top: 14.8%;
+    font-size: 12px;
+  }
+  .mail {
+    justify-content: flex-start;
+    font-size: 12px;
+  }
+  .icon__right {
+    width: 12.58px;
+    height: 12.58px;
+  }
+  .icon__left {
+    width: 15.38px;
+    height: 15.38px;
+  }
+  .footer__logo {
+    width: 53.59px;
+    height: 31.69px;
+  }
+  .footer__copyright {
+    font-size: 10px;
+  }
+  .footer__text {
+    flex-wrap: wrap;
+  }
 }
