--- a/src/style.css
+++ b/src/style.css
@@ -68,216 +68,15 @@ select {
   margin: auto;
   max-width: 1440px;
 }
-.footer__container_upper {
-  padding: 179px 410px 185px 122px;
-}
-.footer__container_bottom {
-  padding: 50px 146px 23px 122px;
-}
-/*--------------------------------------------------------------------*/
-.footer {
-  font-family: "Roboto", sans-serif;
-  line-height: 1;
-}
-.footer__upper {
-  background: #9dc9c8;
-}
-.footer__bottom {
-  background-color: #000000;
-  color: white;
-}
-/*--------------------------------------------------------------------*/
-.footer__word {
-  font-size: 25px;
-  margin-bottom: 10px;
-}
-.footer__number {
-  font-size: 80px;
-  margin-bottom: 6.4%;
-}
-.herader {
-  font-weight: bold;
-  font-size: 55px;
-  font-family: "Roboto Slab", serif;
-  margin-bottom: 4.5%;
-}
-.footer__bottom-top {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 12.6%;
-  width: 100%;
-}
-.footer__text {
-  display: flex;
-  font-size: 18px;
-}
-.text__header {
-  margin-bottom: 3.1%;
-  font-size: 25px;
-}
-.footer__right-side {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  font-size: 25px;
-}
-.footer__left-side {
-  width: 100%;
-}
-.footer__icon {
-  display: flex;
-}
-.text {
-  max-width: 294px;
-}
-.mobile {
-  width: 100%;
-  justify-content: flex-end;
-  display: flex;
-  margin-bottom: 25px;
-  margin-right: 25px;
-  align-items: center;
-}
-.mail {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+
+.block6{
+  
 }
 
-.footer__logo {
-  margin-bottom: 5.2%;
-}
-.icon__left {
-  margin-right: 3.3%;
-}
-.icon__right {
-  margin-right: 4%;
+.footer{
+  background-color: black;
 }
 
-.text-left {
-  margin-right: 6%;
-}
-
-@media (min-width: 992px) and (max-width: 1279px) {
-  .footer__container_upper {
-    
-    max-width: 834px;
-    padding: 103px 237px 107px 70px;
-  }
-
-  .footer__container_bottom {
-    margin: auto;
-    max-width: 834px;
-    padding: 29px 84px 13px 70px;
-  }
-
-  .mobile {
-    margin-right: 15px;
-    font-size: 14px;
-    margin-bottom: 11px;
-  }
-  .mail {
-    font-size: 14px;
-  }
-  .icon__right {
-    width: 15.64px;
-    height: 10.43px;
-  }
-  .icon__left {
-    width: 19.11px;
-    height: 19.11px;
-  }
-  .footer__logo {
-    width: 53.59px;
-    height: 31.69px;
-  }
-  .footer__copyright {
-    font-size: 10px;
-    margin-top: 84px;
-  }
-  .footer__text {
-    flex-wrap: wrap;
-  }
-  .herader {
-    font-size: 32px;
-  }
-  .footer__word {
-    font-size: 14px;
-  }
-  .footer__number {
-    font-size: 46px;
-  }
-  .text__header {
-    font-size: 14px;
-  }
-  .text {
-    font-size: 10px;
-    max-width: 170.28px;
-    line-height: 1;
-  }
-}
-
-@media (min-width: 320px) and (max-width: 991px) {
-  .footer__container_upper {
-    max-width: 375px;
-    padding: 62px 32px 72px 35px;
-  }
-
-  .footer__container_bottom {
-    margin: auto;
-    max-width: 375px;
-    padding: 23px 188px 10px 35px;
-  }
-  .footer__bottom-top {
-    flex-wrap: wrap;
-  }
-  .mobile {
-    justify-content: flex-start;
-    margin: 0;
-    margin-top: 47px;
-    font-size: 12px;
-    margin-bottom: 11px;
-  }
-  .mail {
-    justify-content: flex-start;
-    font-size: 12px;
-  }
-  .icon__right {
-    width: 12.58px;
-    height: 12.58px;
-  }
-  .icon__left {
-    width: 15.38px;
-    height: 15.38px;
-  }
-  .footer__logo {
-    width: 53.59px;
-    height: 31.69px;
-  }
-  .footer__copyright {
-    font-size: 10px;
-    margin-top: 57px;
-  }
-  .footer__text {
-    flex-wrap: wrap;
-  }
-  .herader {
-    font-size: 26px;
-  }
-  .footer__word {
-    font-size: 12px;
-  }
-  .footer__number {
-    font-size: 37px;
-  }
-  .text__header {
-    font-size: 12px;
-  }
-  .text {
-    font-size: 10px;
-    max-width: 138px;
-    line-height: 1;
-  }
+.icon__left{
+  
 }
