--- a/src/style.css
+++ b/src/style.css
@@ -62,80 +62,181 @@ select {
   font: inherit;
 }
 
-/* .first-block {
-} */
-
-.first-block__elements-wrapper {
-    width: 80%;
-    display: flex;
-    margin-bottom: 30px;
+/* --------------------------------------------------------- */
+body {
+  font-family: Roboto, monospace;
 }
 
-.first-block__elements-top {
-    width: 70%;
-    display: flex;
-    justify-content: space-between;
+.container {
+  margin: 0px auto;
+  max-width: 1440px;
+  width: 80%;
+}
+
+header {
+  margin-bottom: 50px;
+}
+
+.first-block__elements-wrapper {
+  width: 500px;
+  margin-bottom: 2em;
+  display: flex;
+  justify-content: space-between;
 }
 
 .first-block__element {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
 }
 
 .first-block__p {
-    display: flex;
-    padding-left: 10px;
+  padding-left: 10px;
 }
 
 .first-block__text-wrapper {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+  display: flex;
+  margin-bottom: 80px;
+}
+
+.first-block__text {
+  width: 54%;
 }
 
 .first-block__h {
-    font-family: 'Roboto Slab';
-    font-weight: bold;
-    font-size: 80px;
-    margin-bottom: 20px;
-    line-height: 1em;
+  font-family: "Roboto Slab";
+  font-weight: bold;
+  font-size: 80px;
+  margin-bottom: 20px;
+  line-height: 1em;
 }
 
 .first-block__p-wrapper {
-    width: 43%;
+  /* width: 415px; */
+  width: 68%;
 }
 .first-block__h-wrapper {
-    width: 80%;
-}
-.first-block__p-text {
-
+  /* width: 630px; */
+  width: 100%;
 }
 
+.first-block__img-wrapper {
+  margin-right: 25px;
+}
 
-
-
-
-
-
+.quote-wrapper {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+}
 
 .quote {
-    background-color: #1e4681;
-    border-radius: 5px;
-    width: 300px;
-    height: 120px;
+  background-color: #1e4681;
+  border-radius: 5px;
+  width: 500px;
+  height: 200px;
+  padding: 15px;
 }
 .quote__p-wrapper {
-    color: white;
-    padding: 20px;
+  color: white;
 }
 
 .quote__p {
-    /* font-weight: 400px; */
-    font-size: 14px;
-    font-family: 'Roboto Slab', serif;
-    text-align: left;
+  font-size: 24px;
+  font-family: "Roboto Slab", serif;
+  text-align: left;
 }
 .author {
+  font-size: 20px;
+  text-align: right;
+  margin: 1em auto;
+}
+
+@media (max-width: 1279px) and (min-width: 992px) {
+  .container {
+    width: 960px;
+    /* width: 70%; */
+  }
+  .first-block__img {
+    width: 60%;
+  }
+  .first-block__h {
+    font-size: 46px;
+  }
+  .first-block__p-text {
     font-size: 12px;
-    text-align: right;
+  }
+  .first-block__p {
+    font-size: 12px;
+  }
+  .quote {
+    width: 280px;
+    height: 115px;
+  }
+  .quote__p {
+    font-size: 14px;
+  }
+  .author {
+    font-size: 12px;
+  }
+  .first-block__element {
+    width: 25%;
+  }
+}
+
+@media (max-width: 991px) {
+  .container {
+    width: 100%;
+    padding: 0px 20px;
+  }
+  .logo {
+    width: 10%;
+  }
+  .first-block__elements-wrapper {
+    width: 55%;
+    margin-bottom: 8px;
+  }
+  .first-block__h-wrapper {
+    width: 70%;
+  }
+  .first-block__p-wrapper {
+    width: 52%;
+  }
+  .globe {
+    width: 30%;
+    height: 30%;
+  }
+  .clock {
+    width: 30%;
+    height: 30%;
+  }
+  .calendar {
+    width: 30%;
+    height: 30%;
+  }
+  .first-block__img {
+    width: 40%;
+  }
+  .first-block__p {
+    font-size: 10px;
+  }
+  .first-block__h {
+    font-size: 36px;
+  }
+  .first-block__p-text {
+    font-size: 10px;
+  }
+  .quote {
+    width: 225px;
+    height: 95px;
+  }
+  .quote__p {
+    font-size: 11px;
+  }
+  .author {
+    font-size: 10px;
+  }
+  .first-block__element {
+    width: 25%;
+  }
 }
