--- a/src/style.css
+++ b/src/style.css
@@ -70,16 +70,20 @@ body {
 .container {
   margin: 0px auto;
   max-width: 1440px;
-  width: 80%;
 }
 
 header {
-  margin-bottom: 50px;
+  margin: 21px 0px 100px 121px;
+}
+
+.first-block {
+  margin: 0px 245px 0px 121px;
 }
 
 .first-block__elements-wrapper {
   width: 500px;
-  margin-bottom: 2em;
+  margin-bottom: 30px;
+  /* margin-bottom: 2em; */
   display: flex;
   justify-content: space-between;
 }
@@ -94,6 +98,7 @@ header {
 
 .first-block__text-wrapper {
   display: flex;
+  justify-content: space-between;
   margin-bottom: 80px;
 }
 
@@ -119,14 +124,13 @@ header {
 }
 
 .first-block__img-wrapper {
-  margin-right: 25px;
+  display: flex;
 }
 
 .quote-wrapper {
   width: 80%;
   display: flex;
   justify-content: center;
-  align-items: center;
   box-sizing: border-box;
 }
 
@@ -154,11 +158,19 @@ header {
 
 @media (max-width: 1279px) and (min-width: 992px) {
   .container {
-    width: 960px;
-    /* width: 70%; */
+    width: 834px;
+  }
+  .first-block {
+    margin: 115px 141px 0px 70px;
+  }
+  /* .first-block__elements-wrapper {
+    width: 400px;
+  } */
+  .first-block__img-wrapper {
+    justify-content: flex-end;
   }
   .first-block__img {
-    width: 60%;
+    width: 65%;
   }
   .first-block__h {
     font-size: 46px;
@@ -186,11 +198,15 @@ header {
 
 @media (max-width: 991px) {
   .container {
-    width: 100%;
-    padding: 0px 20px;
+    /* width: 100%; */
+    min-width: 375px;
+    margin: 0px 30px;
   }
   .logo {
     width: 10%;
+  }
+  .first-block {
+    margin: 111px 32px 0px 35px;
   }
   .first-block__elements-wrapper {
     width: 55%;
@@ -201,6 +217,9 @@ header {
   }
   .first-block__p-wrapper {
     width: 52%;
+  }
+  .first-block__img-wrapper {
+    justify-content: flex-end;
   }
   .globe {
     width: 30%;
@@ -213,9 +232,6 @@ header {
   .calendar {
     width: 30%;
     height: 30%;
-  }
-  .first-block__img {
-    width: 40%;
   }
   .first-block__p {
     font-size: 10px;
