--- a/src/style.css
+++ b/src/style.css
@@ -85,3 +85,16 @@ select {
   max-width: 662px;
   font-size: 24px;
 }
+
+.upper-block__right-img{
+  position: relative;
+}
+
+
+.upper-block__right-shadow{
+  position: absolute;
+  bottom: 20px;
+  left: -30px;
+  width: 150%;
+  z-index: -1;
+}
