--- a/src/style.css
+++ b/src/style.css
@@ -98,7 +98,7 @@ select {
   margin-bottom: 45px;
 }
 
-.upper-block__right-img {
+.upper-block__img-wrapper {
   position: relative;
   top: 30px;
 }
